@@ -41,8 +41,10 @@
 
 package org.graalvm.buildtools.maven
 
+import org.graalvm.buildtools.utils.NativeImageUtils
 import spock.lang.IgnoreIf
 import spock.lang.Issue
+import spock.lang.Requires
 
 class JavaApplicationWithTestsFunctionalTest extends AbstractGraalVMMavenFunctionalTest {
 
@@ -182,4 +184,21 @@ class JavaApplicationWithTestsFunctionalTest extends AbstractGraalVMMavenFunctio
         outputDoesNotContain expectedOutput
     }
 
+    private static int getCurrentJDKVersion() {
+        return NativeImageUtils.getMajorJDKVersion(GraalVMSupport.getGraalVMHomeVersionString())
+    }
+
+    @Requires({ getCurrentJDKVersion() >= 23 })
+    def "can use the Maven plugin with the runtimeArgs config to run tests in a native image"() {
+        withSample("java-application-with-tests")
+
+        when:
+        mvn '-Ptest-runtime-args', '-DquickBuild', 'test'
+
+        def expectedOutput = "Note: this run will print partial stack traces of the locations where a"
+
+        then:
+        buildSucceeded
+        outputContains expectedOutput
+    }
 }
